--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,28 +7,28 @@
 
 messages: # Support colors by '§' only. Sorry :<
   help: "§e§lIgnotus §8- §7very useful minecraft plugin."
-  no-permission: "§4» §cNie masz dostępu do tej komendy."
-  error: "§c» §7Operacja nie powiodła się. Skontaktuj się z administracją."
-  usage: "§cUżyj: §7/set {1} <nazwa>"
-  usage-admin: "§7Użyj: §a/set {0} {1} <nazwa>"
-  unknown: "§a» §7Możesz ustawić jedynie wartości:\n§a» §aInstagram§7, §aYouTube§7, §aTwitch§7 i §aDiscord"
-  player-quit: "§a» §7Przykro nam, ten gracz wyszedł z serwera, poczekaj z tym aż wróci."
+  no-permission: "§4» §cYou do not have access to this command."
+  error: "§c» §7The operation failed. Contact the administration."
+  usage: "§cUse: §7/set {1} <nazwa>"
+  usage-admin: "§7Use: §a/set {0} {1} <nazwa>"
+  unknown: "§a» §7You can only set names of:\n§a» §aInstagram§7, §aYouTube§7, §aTwitch§7 i §aDiscord"
+  player-quit: "§a» §7Sorry, this player has left the server,\n§a» §7please wait until he comes back."
   long: 30
-  toolong: "§a» §7Nazwa nie może być taka długa!\n§a» §7Maksymalna ilość znaków to: §a{1}"
-  success: "§a» §7Twoja nazwa {0} została ustawiona na §a{1}§7."
-  success-admin: "§c» §7Nazwa {0} §c{1} §7ustawiona na §c{2}§7."
-  gift-get: "§a» §7Dostałeś właśnie przedmiot od §a{1}§7!"
-  gift-get-not-place: "§a» §7Nie masz miejsca w ekwipunku, prezent został upuszczony."
-  gift-give: "§a» §7Przedmiot został pomyślnie dostarczony do §a{1}§7!"
-  gift-cooldown: "§a» §7Następny prezent możesz dać dopiero za §a{1} §7sekund."
+  toolong: "§a» §7That name is too long!\n§a» §7The maximum number of characters is: §a{1}"
+  success: "§a» §7Your {0}'s name just set to §a{1}§7."
+  success-admin: "§c» §7Value {0} §c{1} §7set to §c{2}§7."
+  gift-get: "§a» §7You just got an item from §a{1}§7!"
+  gift-get-not-place: "§a» §7You have no space in your inventory, the gift has been dropped."
+  gift-give: "§a» §7The item was successfully delivered to §a{1}§7!"
+  gift-cooldown: "§a» §7You can give the next gift only in §a{1} §7seconds."
 
   # Use {1} for amount of cleared items on the ground.
-  abyss-open: "§3» §7Usunięto §3{1} §7itemów z ziemi! Trafiły one do §3/otchlan§7i."
-  abyss-timer: "§3» §7Itemy z ziemi zostaną usunięte za §3{1} §7sekund."
+  abyss-open: "§3» §7Removed §3{1} §7items from the ground! They fell into the §3/abyss§7."
+  abyss-timer: "§3» §7Items on the ground will be removed in §3{1} §7seconds."
   abyss-last3msg: "§3» §7{1}"
   # You may use {1} for the remaining time.
-  abyss-closed: "§3» §bOtchłań §7jest na razie zamknięta."
-  abyss-isclosing: "§3» §bOtchłań §7została własnie §cZamknięta§7."
+  abyss-closed: "§3» §7The §3abyss §7is closed for now."
+  abyss-isclosing: "§3» §7The §3abyss §7has just been §4closed§7."
 
 items: # Support colors by '&' !!! :>
   title: "%vault_prefix%%player_name%"
@@ -39,34 +39,25 @@ items: # Support colors by '&' !!! :>
     commandR: ""
     name: " "
     lore:
-      - '&7Stan Konta: &6%vault_eco_balance_commas% $'
-      - '&7Liczba Zabójstw: &c%statistic_player_kills%'
-      - '&7Liczba Śmierci: &4%statistic_deaths%'
-      - '&7Ukończone Misje: &a%superior_player_missions_completed%'
-      - ''
-      - '&7Wyspa: &a%superior_island_name_leader%'
-      - '&7Członków: &a%superior_island_team_size%'
-      - '&7Warpów: &a%superior_island_warps%'
-      - ''
-      - '&7Level Wyspy: &2%superior_island_level%'
-      - '&7Wartość Wyspy: &6%superior_island_worth% $'
+      - '&7Balance: &6%vault_eco_balance_commas% $'
+      - '&7Kills: &c%statistic_player_kills%'
+      - '&7Deaths: &4%statistic_deaths%'
       - ''
   item0:
     # If command is "", no commands.
     # {1} is nick of receiver.
     commandL: "trade {1}"
     commandR: ""
-    name: "&7Bezpieczna &c&lWymiana"
+    name: "&7Safe &c&lTrade"
     lore:
       - ''
-      - '&7Boisz się o swoje interesy?'
-      - '&7Podejrzewasz, że ktoś chce Cię oszukać?'
+      - '&7Are you concerned about your interests?'
+      - '&7Do you suspect someone is trying to deceive you?'
       - ''
-      - '&7Użyj bezpiecznej wymiany, aby już nigdy,'
-      - '&7nie dać się naciągnąć na jakąś grubą'
-      - '&7sprzedaż lub wymianę bez zabezpieczeń.'
+      - '&7Use a secure trade to never fall for any'
+      - '&7fat sale or unsecured trade again.'
       - ''
-      - '&cKliknij, aby zaproponować tej osobie Wymianę.'
+      - '&cClick to offer this person a Trade.'
   item1:
     # If command is "", no commands.
     # {1} is nick of receiver.
@@ -100,22 +91,22 @@ items: # Support colors by '&' !!! :>
   gift:
     # In seconds
     cooldown: 10
-    name: "&7Prezent dla &e%player_name%"
+    name: "&7Gift for &e%player_name%"
     lore:
       - ''
-      - '&7Chcesz coś podarować temu graczowi?'
-      - '&7Wystarczy, że klikniesz na żądany przedmiot'
-      - '&7w swoim ekwipunku, a następnie potwierdzisz'
-      - '&7dar, klikając na niego dwukrotnie.'
+      - '&7Do you want to give this player something?'
+      - '&7Just click on the desired item in your'
+      - '&7inventory and then confirm the gift'
+      - '&7by shift-click on it.'
       - ''
-      - '&eKliknij na przedmiot w swoim ekwipunku.'
+      - '&eClick on an item in your inventory.'
     lore-item:
       - ''
       - '&e&m                                                       '
-      - '&7Aby podarować ten przedmiot temu graczowi,'
-      - '&7kliknij go trzymając przycisk &eShift&7.'
+      - '&7To gift this item to this player, click'
+      - '&7on it while holding the &eShift &7key.'
   media:
-    name: "&3Połączone Konta"
+    name: "&3Connected Accounts"
     lore:
       - ''
       - '&7Instagram: &c%ignotus_instagram%'
@@ -128,7 +119,7 @@ items: # Support colors by '&' !!! :>
       - ''
       - '&7Discord: &b&l%ignotus_discord%'
       - ''
-      - '&7Aby ustawić swoje konta, użyj komendy &3/ustaw'
+      - '&7To set your accounts, use the &3/set &7command.'
     # This is the text that displays if someone of media doesn't have a name set.
     if-empty: ""
   blank:
@@ -143,7 +134,7 @@ interact:
   antypvptime: 10
 abyss:
   enable: true
-  title: "               &3&lOtchlan"
+  title: "                &3&lAbyss"
   interval: 120
   lookable: 0
   timer:
@@ -156,6 +147,56 @@ abyss:
     name: "&cPoprzednia Strona"
     lore: []
   bossbar:
+    # set before and after empty for disable bossbar
     time: 10
     before: "§7Itemy z ziemi zostaną usunięte za:"
     after: "§7Usunięto §3{1} §7itemów z ziemi! Trafiły one do §3/otchlan§7i."
+tablist:
+  enable: true
+  # in ticks, 20 ticks = 1 second
+  refreshFrequency: 1
+  frequency: 5
+  headers:
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7--------------------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&e-&7-------------------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7-&e-&7------------------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7--&e-&7-----------------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7---&e-&7----------------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7----&e-&7---------------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7-----&e-&7--------------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7------&e-&7-------------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7-------&e-&7------------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7--------&e-&7-----------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7---------&e-&7----------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7----------&e-&7---------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7-----------&e-&7--------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7------------&e-&7-------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7-------------&e-&7------"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7--------------&e-&7-----"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7---------------&e-&7----"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7----------------&e-&7---"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7-----------------&e-&7--"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7------------------&e-&7-"
+    - "&e&lIgnotus\n\n&7Welcome &e%player_name%&7!\n\n&7-------------------&e-"
+  footers:
+    - "&7--------------------\n\n&7Online: &e%server_online%"
+    - "&e-&7-------------------\n\n&7Online: &e%server_online%"
+    - "&7-&e-&7------------------\n\n&7Online: &e%server_online%"
+    - "&7--&e-&7-----------------\n\n&7Online: &e%server_online%"
+    - "&7---&e-&7----------------\n\n&7Online: &e%server_online%"
+    - "&7----&e-&7---------------\n\n&7Online: &e%server_online%"
+    - "&7-----&e-&7--------------\n\n&7Online: &e%server_online%"
+    - "&7------&e-&7-------------\n\n&7Online: &e%server_online%"
+    - "&7-------&e-&7------------\n\n&7Online: &e%server_online%"
+    - "&7--------&e-&7-----------\n\n&7Online: &e%server_online%"
+    - "&7---------&e-&7----------\n\n&7Online: &e%server_online%"
+    - "&7----------&e-&7---------\n\n&7Online: &e%server_online%"
+    - "&7-----------&e-&7--------\n\n&7Online: &e%server_online%"
+    - "&7------------&e-&7-------\n\n&7Online: &e%server_online%"
+    - "&7-------------&e-&7------\n\n&7Online: &e%server_online%"
+    - "&7--------------&e-&7-----\n\n&7Online: &e%server_online%"
+    - "&7---------------&e-&7----\n\n&7Online: &e%server_online%"
+    - "&7----------------&e-&7---\n\n&7Online: &e%server_online%"
+    - "&7-----------------&e-&7--\n\n&7Online: &e%server_online%"
+    - "&7------------------&e-&7-\n\n&7Online: &e%server_online%"
+    - "&7-------------------&e-\n\n&7Online: &e%server_online%"
