--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,25 +16,25 @@ commands:
     usage: /set <profil> <nazwa>
     aliases: ustaw
     permission: ignotus.set
-    permission-message: §4» §cNie masz dostępu do tej komendy.
+    permission-message: §4» §cYou do not have access to this command.
   setadmin:
     description: Set player's media.
     usage: /setadmin <profil> <nick> <nazwa>
     aliases: ustawadmin
     permission: ignotus.admin
-    permission-message: §4» §cNie masz dostępu do tej komendy.
+    permission-message: §4» §cYou do not have access to this command.
   abyss:
     description: Open abyss.
     usage: /abyss
     aliases: otchlan
     permission: ignotus.abyss
-    permission-message: §4» §cNie masz dostępu do tej komendy.
+    permission-message: §4» §cYou do not have access to this command.
   self:
     description: Open yourself profile.
     usage: /self
     aliases: ja
     permission: ignotus.self
-    permission-message: §4» §cNie masz dostępu do tej komendy.
+    permission-message: §4» §cYou do not have access to this command.
   ignotus:
     description: Help.
     usage: /ignotus
