--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -163,49 +163,31 @@ tablist:
   refreshFrequency: 1
   frequency: 5
   headers:
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&eI &7know, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I &eknow&7, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I &eknow&7, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I &eknow&7, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I &eknow&7, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I &eknow&7, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, &eme &7too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me &etoo &7:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me &etoo &7:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me &etoo &7:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too &e:)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too :)\n\n"
-    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too :)\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&eI &7know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I &eknow&7, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I &eknow&7, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I &eknow&7, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I &eknow&7, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I &eknow&7, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, &eme &7too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me &etoo\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me &etoo\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me &etoo\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
+    - "&e&lIgnotus\n\n&7Wow &e%player_name%&7, you look great!\n&7I know, me too\n\n"
   footers:
     - "                                                  \n\n&7Online: &e%server_online% &7Tps: &e%server_tps_1_colored%"
